deploy/destination-rule-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-service
spec:
  host: account-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-service
spec:
  host: auth-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: config
spec:
  host: config
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: monitoring
spec:
  host: monitoring
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-service
spec:
  host: notification-service
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: registry
spec:
  host: registry
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: statistics-service
spec:
  host: statistics-service
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: turbine-stream-service
spec:
  host: turbine-stream-service
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-mongodb
spec:
  host: account-mongodb
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-mongodb
spec:
  host: auth-mongodb
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-mongodb
spec:
  host: notification-mongodb
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: statistics-mongodb
spec:
  host: statistics-mongodb
  subsets:
  - name: v1 
    labels:
      version: v1  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq
spec:
  host: rabbitmq
  subsets:
  - name: v1 
    labels:
      version: v1
